Rewrote the Project Background section longer

--- a/project-description/project-bg.tex
+++ b/project-description/project-bg.tex
@@ -1,10 +1,10 @@
 \subsection{Project Background}
-Gardening is difficult. There are so many variables that a gardener must try to keep within their control. Soil moisture, temperature, soil composition just to name a few. The entire process of gardening is primarily uninvolved as a more involved process could be equated to the old adage ``watching grass grow.'' Here lies the issue, since plants grow without hardly any involvement from the gardener despite controlling the watering and feeding, a large part of the process can be automated.
+Home gardening is a valuable hobby that helps people get outdoors, create something beautiful, and earn tangible rewards. Unfortunately, plants are sensitive organisms that require consistent attention. Plant life also involves complex relationships between the organisms and their environment. These two problems can discourage potential gardeners. This team proposes to build a system that addresses these issues through mechanical automation and user notification.
 
-There have been numerous ``Garduino'' projects that anyone could find and quickly modify to their needs. These projects generally use the sensors in the Arduino starter kits as well as an LCD or dot matrix display to read out the sensor data. Such a project is not well scoped for a senior design project. The difference in what we propose and what has already been done are the control aspects, automating watering and feeding and even temperature and sunlight regulation.
+In 2022 there is great potential for realizing these advantages. Remote sensing, wireless communication, API integration, and closed-system power and water control are both available and economical. Many “DIY smart-gardens” and “Garduino” projects have been published to the internet. In the agriculture industry, there are commercially available technologies with high performance systems for water distribution, network communication, and remote sensing. This project is intended to advance the field by producing a system that can maintain a suitable environment for plant growth by autonomously sensing and modifying the conditions of the garden bed. In addition, it will feature a notification system that allows the plants to “speak” by prompting the user to make accommodations when bad weather is projected, such as a cold snap.
 
-The sensors in the Arduino starter kits are all electrical sensors which in the high moisture environment of a plant bed will decay quickly. There has been a lot of progress in optical sensing and in our original preliminary research we found promising devices to sense soil moisture and composition optically instead of electrically. The hope is that such an optical sensor may one day be mounted on a drone and flown over a field to get the same data we are using to control our plant bed.
+Especially worth noting is that this project will feature on-the-rise technology in the form of a Near Infrared Spectrophotometer. Smart agricultural systems need to determine several variables, including moisture level, nutrient content, and acidity. There is a wide variety of techniques for sensing soil moisture, but by far the cheapest and most used is electrical conductivity. This involves pressing electrical nodes into the ground and up against the wet soil matrix, which inevitably leads to corrosion. DIY and commercial systems require other discrete sensors and even chemical analysis to characterize the state of the soil. Near Infrared Spectroscopy is an alternative method of soil sensing that offers many advantages over these traditional technologies. It works by stimulating a response from weak molecular bonds in the soil, isolating the frequencies of that response, and comparing the signal strengths to that of a known sample. In addition to being a noninvasive, corrosion-immune source of information about soil moisture, the NIR Spectrometer gathers data about the chemical contents of the soil. This means that the same scan will detect the presence and quantity of soil nutrients and water acidity as well. A high speed, high precision spectrometer costs between \textdollar5,000 - \textdollar10,000, but this application requires only rudimentary sensing capabilities. It may even be possible to acquire the parts for less than \textdollar500, and if this is the case, then it would be a significant step towards increasing the adoption of state-of-the-art sensing technologies.
 
-From the sensors, the project will also implement a control scheme. The hope is to build a gantry that supports a swiveling solar panel array as well as solenoids to control water. There are also items beyond the control of the plant bed such as weather (namely frost) which will be resolved in software by notifying the user of such conditions.
+The proposed system integrates sensing with a power control scheme. The garden bed will sit under a gantry, which will serve as the foundation for a solar panel array. If deemed efficient, the solar panel will have a swivel mount to maximize energy captured. This power will be stored in a battery and used to control a solenoid that will release water into the garden bed when prompted by the sensing system. It will also power the microcontroller, NIR Spectrometer, Solar panel swivel mount, and wireless communication. 
 \subsubsection{Motivation}
 The idea came from seeing the ``Garduino'' style projects all over hobbyist forums and websites but the idea really took hold in that each member of the team saw an opportunity to explore a new facet of engineering they held an interest in. This project provided the team an opportunity to apply our knowledge on power systems and delivery, controls, digital signal processing, and optical sensing. These are all areas that the team wanted to demonstrate a high level of understanding in and grow at the synthesis level.
