Changed Outline to account for goals/objectives

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -34,7 +34,7 @@ The ultimate novelty in this project is all of the sensing that will be done thr
 \newpage
 \section{Project Description}                   % Section 2
 \input{project-description/project-bg.tex}      % Section 2.1
-\input{project-description/objectives.tex}      % Section 2.2
+\input{project-description/Goals and Objectives.tex}      % Section 2.2
 \input{project-description/requirements.tex}    % Section 2.3 - needs work, expanding requirements, better house of quality
 \section{Research}                              % Section 3
 \input{research/previous-work.tex}              % Section 3.1
