Still getting Goals and Objectives up and running

--- a/project-description/Goals and Objectives.tex
+++ b/project-description/Goals and Objectives.tex
@@ -12,8 +12,8 @@
       | >{\raggedright\arraybackslash}X
       |
     }
-    \caption{MCU option breakdown}
-    \label{table:mcubreakdown1} \\
+    \caption{Goals}
+    \label{table:Goals} \\
     \hline
     \textbf{Model} & \textbf{\href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{LAUNCH\-XL-CC26X2\-R1}} & \textbf{\href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCH\-CC3220\-MODASF}} & \textbf{\href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Pico W}} & \textbf{\href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Nano 33 BLE}} & \textbf{\href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{B-L4S5I-IOT01A}} \\
     \hline
@@ -65,8 +65,8 @@
       | >{\raggedright\arraybackslash}X
       |
     }
-    \caption{MCU option breakdown}
-    \label{table:mcubreakdown1} \\
+    \caption{Objectives}
+    \label{table:Objectives} \\
     \hline
     \textbf{Model} & \textbf{\href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{LAUNCH\-XL-CC26X2\-R1}} & \textbf{\href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCH\-CC3220\-MODASF}} & \textbf{\href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Pico W}} & \textbf{\href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Nano 33 BLE}} & \textbf{\href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{B-L4S5I-IOT01A}} \\
     \hline
