Added in a power supply section to the power subsection

--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -133,8 +133,12 @@ At minimum, this power subsystem will operate with the following:
 	\item Solar Charge Controllers
 	\item AC/DC converterter
 \end{itemize}
+\textbf{Power Supply}\par
+The power system is a key factor to this model and trying to make this an independent system. This is key because this power system needs to be able to power all of the many different components, while also charging itself when not operating. 
+As part of the goal to make this an independent system, solar energy plays a great role in this and making this system run. Before anything as well, this part of the system must operate first before it can power other components. For this system to run, the key parts include: solar panels that convert light energy into electrical energy; solar charge controller to regulate output voltage from the solar panel into the battery; the battery to directly power the other components in the model.
+In this model there are many different sensors, electrical, and mechanical components all of which require power. This requires a design of how the power system will flow and operate. It first begins with determining the total power needed for the whole system to run. This can be determined by finding the individual power ratings of each component and calculating them all together. After that is found, we can then choose what type of battery and the quantity needed for the model. When choosing what kind of battery and how many is needed, how long we want the system to run, optional secondary power source, and optional battery bank must be put into consideration as well. As follows, we begin to research solar panels from type, efficiency, power rating, etc. Then, a solar charge controller must be selected, a device that sits between the solar panel and the battery to regulate how much power is going into the battery. Once that is done, a voltage regulator must be determined, to regulate voltage from the battery to the smaller components that need to be powered. After all that is done, then we can find other components that will make the power system more reliable and efficient in any way.
 \textbf{Solar Panels}\par
-The stretch goal for this project is to use solar panel arrays as blinds to increase/decrease sunlight as well as temperature. The solar panels are also use tocollect energy and power our model. We must be strategic when choosing our solar panels so that they are operational, provide the proper amount of power, and more.\par
+The stretch goal for this project is to use solar panel arrays as blinds to increase/decrease sunlight as well as temperature. The solar panels are also use to collect energy and power our model. We must be strategic when choosing our solar panels so that they are operational, provide the proper amount of power, and more.\par
 There are many different types of solar panels. These include monocrystalline solar panels, polycrystalline solar panels, and thin-film solar panels. Each solarpanel has different compositions that make it as efficient as they are, how much power can be collected, etc. \par
 For this project, we have selected multiple types of solar panels based on efficiency and cost.
 \begin{table}[H]
