--- a/research/previous-work.tex
+++ b/research/previous-work.tex
@@ -1,1 +1,29 @@
 \subsection{Previous and Related Works}
+
+\subsubsection{DIY near-IR spectrometer}
+
+Yuan Cao is a Ph.D. student at MIT with a blog where he posts his unofficial projects. He published a project titled “A \textdollar500 DIY near-IR spectrometer that would sell for \textdollar10,000.” In it, he describes his idea, designs and results for a low cost infrared spectrometer. His design features surprisingly high performance for its price. The system uses an InGaAs photodiode, a reflective diffraction grating, a fiber collimator, some cheap optics, and a microcontroller to create a spectrograph of any light source. It boasts very high signal to noise ratios, 5-6nm spectral resolution, and a price point under \textdollar500. There are definitely some design features worth imitating, specifically the diffraction grating “scanner” that is rotated to pass wavelengths across the surface of the photodiode, as well as the filter circuitry that cleans up the electrical signal. 
+
+That said, there are some reasons why this project differs in application from the Auto Garden Bed Near Infrared Spectrometer. First, the detector has a spectral range from 800 – 1600nm. This is the Near Infrared Regime, but it is not very far into the NIR, which in some contexts refers to wavelengths as far out as 2500nm. If Soil Spectroscopy requires this depth, or frequencies in the visible spectrum, the design will have to be modified. Second, this system was built for lab use, specifically to characterize light sources. The reported data was very promising, but in every case the spectrometer targeted an object that was emitting strong optical power in every direction. Soil does not fluoresce, so the Auto Garden Bed will require additional components to probe the soil with an electromagnetic wave. In the end, what’s most important is that this project demonstrates that low cost spectroscopy can be achieved.
+
+
+\subsubsection{Chlorophyll Flourescence Spectrometer}
+
+In 2021 UCF’s ECE Senior Design Group 1 designed a Chlorophyll Fluorescence Spectrometer. The purpose of this project was to design a system that would detect chlorophyll in plants through stimulation by UV rays. It featured a diffraction grating and a monochromatic CMOS sensor. It is interesting to note that unlike the previously explored project, spatial separation of light frequencies is achieved with a monochromatic camera. This means that each intensity can be mapped to the position on the cmos sensor, and the system can “stare” rather than “scan.” Eliminating moving parts is a major benefit in projects requiring sensitive optical alignment, making this a feature worth seriously considering.
+
+This project produces a design with similar goals to the Auto Garden Bed, because it features a light source, a target object, focusing optics, wavelength selection, and generating and interpreting a spectrograph. However, the optical regime of UV rays may be limited to fluorescence spectroscopy and unfit for proximity soil sensing. The research will have to determine what sensors are viable and whether this imposes further constraints on the system.
+
+\subsubsection{Smart Garden Controller}
+
+The Smart Garden Controller was a UCF senior design project with very similar motivations to the Auto Garden Bed. The goal was to create a system that reduced user labor by automating the irrigation schedule of garden areas and reducing waste by sensing moisture levels. The system was also designed to anticipate the informational needs of the gardener and come prepared with a set of popular vegetables and plants, corresponding to variables the team had already investigated to maximize flourishing. It used sensors to detect the health of the plant environment, a microcontroller to facilitate irrigation, and a web API to interface to the user for control of the system. The group also set goals to offer ease of setup, competitive price, and Smart Device integration by integrating with a device like Amazon’s “Alexa.”
+
+This project features much of the same core functionality as the Auto Garden bed, however, closer review of the scope and feature set reveal that the designs are incompatible. The Smart Garden Controller was designed to facilitate more precise control of an entire garden, allowing the user to isolate different areas for growing different plants. The area of interest was 100 squared feet, and the system was intended to relieve the gardener of the complication of watering each section for different amounts of time. This meant a wide reaching irrigation network as well as a network of sensors throughout the yard. The scope of the Auto Garden Bed allows for single source irrigation and sensing, which allows for greater flexibility of mechanical design.
+
+\subsubsection{Automated Rotating Solar Plant Rack with Self-care Capabilities}
+
+\subsubsection{Stem 'n' Leaf}
+
+\subsubsection{Green Steel Garden}
+
+\subsubsection{Auto Plant Feed System}
+
